adding home routing and base grids

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Zachary Marazita</h1>
-<router-outlet></router-outlet>
+<div class="grid">
+    <h1>Zachary Marazita</h1>
+    <router-outlet></router-outlet> 
+</div>
+
